turtleart.lessons.turtleart.Main.Triangle.scala.error
Source:5: error: '<-' expected but ')' found.
	for(i<1 to 3) {
                    ^Source:9: error: illegal start of simple expression
}
^