turtleart.lessons.turtleart.Main.Triangle.scala.code
override def run() {
	var a:Double = 0
	var b:Double = 0
	for(i<1 to 3) {
		gauche(120);
		avance(200)
	}
}
